# selene-drive

./: .env.template  .gitignore  Dockerfile  README.md  alembic.ini  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
db/: session.py
db/db_api/: base.py  models_db_api.py
db/migrations/: env.py
db/migrations/versions/create/: 2025_07_20__15-14__8967d29c5981_create_rover_states_table.py  2025_07_20__15-17__985a6ac030dc_create_command_inputs_table.py  2025_07_20__15-18__b65e3eb20584_create_rover_states_to_command_inputs_.py  2025_07_20__15-20__36d3f435847b_create_obstacles_table.py  98f8bb68cc11_initaial.py
db/migrations/versions/triggers/: 2025_07_20__16-51__a81dc1afd560_add_prevent_rover_on_obstacle_trigger.py
db/models/: __init__.py  mixins.py  models.py
docker/: docker-entrypoint.sh  gunicorn_config.py  runserver.sh
managers/: __init__.py  base_manager.py  rover_manager.py
routers/: app_router.py  internal_router.py  rover_router.py
schemas/: common.py  enums.py  rover_schemas.py
tests/: conftest.py  dummy_test.py
tests/fixtures/: base_fixtures.py
tests/rover/: test_api_views.py  test_db_data_provider.py  test_rover_landing_helper.py  test_rover_manager.py  test_rover_planer.py
tests/utils/: db.py  helpers.py  schemas.py  utils.py
utils/: annotations.py  exceptions.py  lifespan.py
